# pico-experiments

./: .gitignore
avr/blink/: Makefile  blink.c
hub75/: CMakeLists.txt  display.c  display.h  display_config.h  font.h  gfxfont.h  hub75.c  smiley.c  starfield.c  text.c
hub75/fonts/: Org_01.h
rp2040/blink/: CMakeLists.txt  blink.c
rp2040/display/: CMakeLists.txt  display.c  display.h  display_main.c  ili9341.h
rp2040/hub75/: CMakeLists.txt  display.c  display.h  img2header.py  multicore.c  smiley.c  smiling1.h  text.c
rp2040/hub75/fonts/: Font_5x7_practical.h  spleen-5x8.h
stm32/blink/: .mxproject  Makefile  blink.ioc
stm32/blink/Core/Src/: main.c
